# VoroPlugin

./: CMakeLists.txt  README.md  cmake_elissa.sh  cmake_elissa_home.sh  cmake_generic.sh  cmake_vs2015.bat
Source/: CMakeLists.txt  Mesh_PluginDemo.cpp  Mesh_PluginDemo.h  PluginAPI.h  PluginRegistration.cpp  PluginRegistration.h  VoroToIogram.cpp  VoroToIogram.h  Voro_CubicLattices.cpp  Voro_CubicLattices.h  Voro_FrameNmesh.cpp  Voro_FrameNmesh.h  Voro_PullToCentroid.cpp  Voro_PullToCentroid.h  Voro_Voronoi.cpp  Voro_Voronoi.h  Voro_VoronoiFromPoints.cpp  Voro_VoronoiFromPoints.h
Test/: CMakeLists.txt  IoTests.cpp  Sphere.off  main.cpp  remeshed_test.off
